--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
 
 spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 
 spring.datasource.url=${DATABASE_URL}
+
+# Allows JSON "student" to be mapped to the UserRole.STUDENT enum
+spring.jackson.mapper.accept-case-insensitive-enums=true
